--- a/SDL_Game/SDL_Game.vcxproj
+++ b/SDL_Game/SDL_Game.vcxproj
@@ -10,6 +10,9 @@
       <Platform>Win32</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="sys_win.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{022BDF11-3AE3-490E-A64B-4790A0463D3B}</ProjectGuid>
     <RootNamespace>SDL_Game</RootNamespace>
