Added game specifics to code base.

--- a/SDL_Game/SDL_Game.vcxproj
+++ b/SDL_Game/SDL_Game.vcxproj
@@ -11,10 +11,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Game.cpp" />
     <ClCompile Include="sys_win.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="defs.h" />
+    <ClInclude Include="Game.h" />
     <ClInclude Include="sys_win.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
